Uprev to minizip 2.7.3

2.6.0 has broken AES encryption support. Also, add a unit test to ensure
this keeps working.

BUG=902586

Change-Id: I3554150e6eb4b5597a473df332d043f6294eb1b3
Reviewed-on: https://chromium-review.googlesource.com/c/1321651
Reviewed-by: Noel Gordon <noel@chromium.org>
Commit-Queue: Anand Mistry <amistry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605941}
Former-commit-id: 6188dcc1a087752900a6c4082e0b4701b65a288a